# God-s-Plan

./: .gitignore  Cargo.toml  LICENSE  README.md  rust-toolchain
assets/tiles/forest/: lasiglasty.gltf
crates/gods_ui/: Cargo.toml
crates/gods_ui/src/: gods_ui.rs  lib.rs  widgets.rs
crates/gods_ui/src/widgets/: button.rs  dropdown.rs  fps_counter.rs
crates/godscraft/: Cargo.toml
crates/godscraft/assets/config/: config.json
crates/godscraft/assets/tiles/empty/plane/: empty_hextile_plane.gltf
crates/godscraft/assets/tiles/forest/: lasiglasty.gltf
crates/godscraft/assets/tiles/forest2/: forest.gltf
crates/godscraft/assets/tiles/forest3/: forest.gltf
crates/godscraft/assets/tiles/forest4/: forest.gltf
crates/godscraft/assets/tiles/forest_4/: lasiglasty.gltf
crates/godscraft/assets/tiles/grassland/: grassland.gltf
crates/godscraft/assets/tiles/grassland2/: grassland.gltf
crates/godscraft/config/: config.json
crates/godscraft/src/: hexagon.rs  main.rs  world_map.rs
crates/godscraft/src/app/: config.rs  debug.rs  mod.rs  mouse.rs  setup.rs  update.rs
crates/godscraft/src/app/config/: world_map_config.rs
src/: hexagon.rs  main.rs  scene.rs  world_map.rs
src/app/: mod.rs  mouse.rs  setup.rs  update.rs
