[package]
name = "gods_plan"
version = "0.1.0"
authors = ["Pawel Rynowiecki <p.rynowiecki@gmail.pl>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
itertools = "0.9.0"

bevy = { git = "https://github.com/bevyengine/bevy.git", branch = "master" }

[dev-dependencies]
test-case = "1.0.0"

[profile.dev.package."*"]
opt-level = 3
