[package]
name = "gods_ui"
version = "0.1.0"
authors = ["Pawel Rynowiecki <p.rynowiecki@gmail.pl>"]
edition = "2018"

[dependencies]
itertools = "0.10.0"
bevy = "0.4.0"
bevy_egui = "0.1.3"
serde = "1.0.118"
serde_json = "1.0.61"

# bevy_egui = { git = "https://github.com/mvlabat/bevy_egui", branch = "main" }
# bevy = { git = "https://github.com/bevyengine/bevy", branch = "master" }